[tool.poetry]
name = "func-data-eng"
version = "0.1.0"
description = ""
authors = ["Rawlsy-py <christopher_m_mitchell@live.co.uk>"]
readme = "README.md"
packages = [{include = "func_data_eng"}]

[tool.poetry.dependencies]
python = "^3.11"
polars = "^1.17.1"
typer = "^0.15.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
